<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >


    <TextView
        android:id="@+id/welcome_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_string"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"></TextView>


    <TextView
        android:id="@+id/email_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_string" >
    </TextView>

    <EditText
        android:id="@+id/email_edittextl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email_hint"
        android:inputType="textEmailAddress">
    </EditText>

    <TextView
        android:id="@+id/password_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_string" >
    </TextView>

    <EditText
        android:id="@+id/password_edittextl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password_hint"
        android:inputType="textPassword">
    </EditText>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    >
    <Button
        android:id="@+id/Login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/login_string" >
    </Button>

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_string" >
    </Button>
</LinearLayout>


</LinearLayout>