<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Large Text"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"></TextView>


    <EditText
        android:id="@+id/name_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name_hint">
    </EditText>

    <EditText
        android:id="@+id/address_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_address_hint">
    </EditText>

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/save_string" >
    </Button>


    <EditText
        android:id="@+id/journey_start_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_start_hint">
    </EditText>

    <EditText
        android:id="@+id/journey_end_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_end_hint">
    </EditText>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/save_trip_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_journey_string"></Button>

        <Button
            android:id="@+id/display_trip_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/display_journey_string"></Button>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom" >

            <ListView
                android:id="@+id/listViewJourney"
                android:layout_width="501dp"
                android:layout_height="252dp" />
        </LinearLayout>



    </LinearLayout>



</LinearLayout>
